# multi-writing-skills

./: .gitignore  CLAUDE.md  README.md  SKILL.md  test_article.md  test_output.html  test_output_v2.html  test_output_v3.html  test_output_v4.html  test_output_v5.html  test_output_v6.html  test_output_v7.html  test_output_v9.html  test_zhihu_draft.py  txt.txt
skills/multi-writing-skills/: README.md  SKILL.md  pyproject.toml
skills/multi-writing-skills/src/multi_writing_skills/: cli.py  config.py
skills/multi-writing-skills/src/multi_writing_skills/converter/: ai.py  api.py
skills/multi-writing-skills/src/multi_writing_skills/humanizer/: __init__.py
skills/multi-writing-skills/src/multi_writing_skills/image/providers/: __init__.py  gemini.py  modelscope.py  openai.py
skills/multi-writing-skills/src/multi_writing_skills/writer/: __init__.py
src/multi_writing_skills/: __init__.py  cli.py
src/multi_writing_skills/image/: __init__.py
src/multi_writing_skills/image/providers/: doubao.py  minimax.py  zhipu.py
src/multi_writing_skills/pdf/: converter.py
src/multi_writing_skills/prompts/: styles.yaml
